# ohosNdkDemo

./: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp  snmp.js  sum.cpp
